tests/base/invalid/List_CompileFail_2.whiley
import whiley.lang.*:*

void System::main([string] args):
     x = a2[0]
